# nimbus_sdk

./: .gitignore  README.md
droneforge-crsf-service/: CMakeLists.txt  README.md
droneforge-crsf-service/src/: main.cpp
droneforge-crsf-service/src/client/: telemetry_client.h
droneforge-crsf-service/src/common/: compatibility.h  error.h  scope.h  static_vector.h  thread_name.h  types.h
droneforge-crsf-service/src/crsf/: crc.h  crsf.cpp  crsf.h  crsf_manager.cpp  crsf_manager.hpp  frame.h  parameter.h  protocol.h
droneforge-crsf-service/src/serial/: serial.cpp  serial.h
